# tcia-radiology-processing

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: tcga_ct_processing_protocol.ipynb  tcia_ct_processing_protocol.ipynb
scripts/: run_tcga_ct_processing_protocol.sh  tcia_ct_processing_protocol.py
tcga_radiogenomics/: utils.py
tcia_radiology_processing/: constants.py  utils.py
